# Cortex

./: .dockerignore  .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architect.md  code-reviewer.md  data-scientist.md  dba.md  devops-engineer.md  devops.md  engineer.md  experiment-runner.md  frontend-engineer.md  frontend.md  latex-engineer.md  mlops.md  orchestrator.md  paper-writer.md  professor.md  refactorer.md  research-scientist.md  researcher.md  reviewer-academic.md  reviewer.md  security-auditor.md  security.md  test-engineer.md  tester.md  ux-designer.md  ux.md
.claude/hooks/: hooks.json  pre-commit-ruff.sh  pre-tool-secret-shield.py  session-end-memory-drain.sh  session-start.sh
.claude/memory/: ADR-001-scope-coverage.md  ADR-002-agent-id-propagation.md  MEMORY_AGENT_ID-wiring.md  concurrency-audit.md  contract.md  pii-daemon.py  pii-instrument-spec.md  pii-profile.md  pii-rules.json  pii-scanner.py  scope-coverage.md  scope-registry.json
.claude/tools/: memory-mcp-server.py  memory-tool.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish-ccplugins.yml  release.yml  sync-ccplugins-fork.yml
_pipeline/: run_test.py
agents/: cortex-wiki-groomer.md
benchmarks/: quick_test.sh
benchmarks/beam/: ablation.py  ablation_results.json  data.py  run_benchmark.py
benchmarks/episodic/: run_benchmark.py
benchmarks/evermembench/: run_benchmark.py
benchmarks/hnsw_probe/: check_env.py  phase1_b_e.sql  phase2_c_d.sql  phase3_a.sql  probe_a.sql  run_conditions.sql  setup.sql
benchmarks/lib/: __init__.py  _e2_conditions.py  _e2_loaders.py  _xb_drivers.py  ablation_runner.py  bench_db.py  blend_weight_sweep.py  cross_benchmark_runner.py  db_setup.py  db_snapshot.py  decay_sweep_runner.py  e2_subsample_runner.py  e2_zipf_runner.py  fusion.py  latency_runner.py  longitudinal_runner.py  n_scan_runner.py  n_scan_templates.txt  noise_floor.py  reporting.py  retriever.py  run_e1_v3_lme.py  run_e1_v3_locomo.py  verification_report.py
benchmarks/llm_head_to_head/: __init__.py  cortex_caller.py  data_loader.py  generator.py  judge.py  long_context_truncator.py  manifest.py  oracle_loader.py  orchestrator.py  pilot.py  retriever_baselines.py
benchmarks/locomo/: data.py  retriever.py  run_benchmark.py  run_benchmark_agents.py
benchmarks/longmemeval/: retrieval_config.json  retrieval_config.yaml  run_benchmark.py
benchmarks/memoryagentbench/: run_benchmark.py
benchmarks/results/: a3_beam_100k_post_refactor.md  a3_locomo_post_refactor.md  a3_longmemeval_post_refactor.md  n_scan  phase5_longmemeval_post_refactor.md
benchmarks/spell_alteration/: run_benchmark.py
commands/: methodology.md
docker/: Dockerfile  entrypoint.sh  run.sh
docs/: api-reference.md  architecture.md  benchmarks-detail.md  data-flow.md  linkedin-endorser-post.md  mcp-connections.example.json  research-post-context-assembly.md  safeskill-report.json  science.md  testing-guide.md
docs/adr/: 001-zero-dependencies.md  002-clean-architecture-layers.md  003-felder-silverman-model.md  004-jaccard-over-cosine-similarity.md  005-agglomerative-over-kmeans-clustering.md  006-ema-for-incremental-updates.md  007-head-tail-jsonl-reading.md  008-handler-as-composition-root.md  009-node-test-over-jest.md  010-sparse-dictionary-learning.md  011-persona-vector-design.md  012-python-migration.md  013-zikkaron-thermodynamic-memory.md  ADR-0044-upstream-mcp-ingest.md  ADR-0045-scalability-governance-rules.md  ADR-0046-automatised-pipeline-integration.md  ADR-0047-entity-positioning-gap10.md  ADR-0048-zetetic-memory-bridge.md  ADR-0049-cortex-stays-local-managed-agents-migration.md  ADR-0050-marketplace-only-no-uvx.md
docs/arxiv/: main.tex
docs/arxiv-context-assembly/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
docs/arxiv-thermodynamic/: .gitignore  Makefile  main.tex  references.bib
docs/invariants/: cortex-invariants.md
docs/papers/: appendix-erdos-bounds.md  appendix-feynman-intuition.md  appendix-popper-falsifiability.md  appendix-shannon-collapse.md  arxiv-endorsement-email.md  linkedin-endorser-post.md  research-post-context-assembly.md  science.md  thermodynamic-memory-vs-flat-importance.md
mcp_server/: __init__.py  __main__.py  doctor.py  hook_runner.py  tool_error_handler.py  tool_registry_advanced.py  tool_registry_core.py  tool_registry_ingest.py  tool_registry_manage.py  tool_registry_memory.py  tool_registry_nav.py  tool_registry_wiki.py
scripts/: bench_variance.sh  install_hooks.py  launch-medical-graph.js  launcher.py  medical-graph-builder.js  payment-graph-builder.js  phase_0_4_5_backfill.sql  refresh_rustup_hash.sh  run-tv-pipeline.js  rustup-init.sha256  setup.py  setup.sh  setup_db.py  spawn-agent.sh  test-agent-briefing.py  update-plugin.sh  v3_12_2_entity_canonical_merge.sql  v3_13_0_a3_migration.sql  v3_13_0_a3_rollback.sql
tasks/: 3-tier-dispatch.md  ablation-dormant-mechanisms.md  beam-10m-llm-head-to-head-protocol.md  beam-improvement-plan.md  benchmark-improvement-plan.md  benchmark-results.md  blend-weight-calibration.md  bruch-2023-implementation.md  discord-post.md  e1-v3-locomo-results-post-fix.md  e1-v3-locomo-results.md  e1-v3-per-category.md  e1-v3-results.md  emotional-memory-research.md  hnsw-determinism-playbook.md  lessons.md  linkedin-post.md  longmemeval-results.md  neuro-evolution-plan.md  paper-implementation-audit.md  paper-numbers-audit.md  profile-readme-draft.md  refactoring-plan.md  smoke_recall_pipeline.py  smoke_user_mood_ema.py  swift-migration.md  todo.md  verification-measurement-discipline.md  verification-protocol.md  zetetic-standard.md
tests_py/: conftest.py  test_doctor.py  test_hook_runner.py  test_main.py
traces/: session-20260408.jsonl
ui/: memory-dashboard.html  methodology-viz.html  payment-viz.html  unified-viz.html
video/: generate.py
(+949 files in other folders)
