[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuro-cortex-memory"
version = "2.3.0"
description = "Persistent memory and cognitive profiling for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = ["mcp", "claude-code", "memory", "cognitive-profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/cdeust/Cortex"
Repository = "https://github.com/cdeust/Cortex"

[project.scripts]
neuro-cortex-memory = "mcp_server.__main__:main"

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]
sqlite = [
    "sqlite-vec>=0.1.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["."]

[tool.coverage.run]
source = ["mcp_server"]

[tool.coverage.report]
show_missing = true
