[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuro-cortex-memory"
version = "3.14.10"
description = "Scientifically-grounded memory system based on computational neuroscience research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = ["mcp", "claude-code", "memory", "cognitive-profiling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/cdeust/Cortex"
Repository = "https://github.com/cdeust/Cortex"

[project.scripts]
# Cortex's only supported install path is Anthropic's plugin marketplace
# (`/plugin install cortex@cortex-plugins`). The marketplace clones this
# repo into ~/.claude/plugins/cache/cortex-plugins/cortex/<version>/ and
# Claude Code spawns the MCP server + hooks via scripts/launcher.py
# (see .mcp.json + .claude-plugin/plugin.json). Cortex is NOT published
# to PyPI and uvx-based invocation is NOT supported.
# The single console script below is for local CLI use of the doctor
# from a checkout (not from a PyPI install).
cortex-doctor = "mcp_server.doctor:run"

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "pgvector>=0.3",
]
sqlite = [
    "sqlite-vec>=0.1.1",
]
codebase = [
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.24.0",
    "networkx>=3.0",
]
benchmarks = [
    "datasets>=2.14.0",          # HuggingFace dataset loader (BEAM, LoCoMo, LongMemEval)
    "sentence-transformers>=2.2.0",  # all-MiniLM-L6-v2 embeddings
    "flashrank>=0.2.0",          # cross-encoder reranking (ms-marco-MiniLM-L-12-v2)
    "psycopg[binary]>=3.1",      # PostgreSQL driver
    "pgvector>=0.3",             # vector similarity in PostgreSQL
    "pymupdf>=1.24.0",           # PDF parsing for some benchmark sources
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"ui" = "mcp_server/ui"

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["."]
markers = [
    "invariants: Phase 0.3+ testable invariant predicates (I1/I2/I3/I4 and parity tests)",
]

[tool.coverage.run]
source = ["mcp_server"]

[tool.coverage.report]
show_missing = true
